--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,8 @@
 .chat {
     color: red;
-    font-size: 18px;
+    font-size: 12px;
+    width: 100%;
+    height: 100%;
     }
 .chat__sidebar {
     float: left;
